--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
         <section class="container">
             <div class="row">
-                <article class="col-8">
+                <article class="col-12 col-lg-8">
                     <div class="row  border border-dary bg-secondary ">
                         <h3>article 1</h3>
                     </div>
@@ -29,9 +29,9 @@
                         <h3>article 3</h3>
                      </div>
                 </article>
-                <aside class="col-4">
+                <aside class="col-12 col-lg-4">
                     <div class="row">
-                        <div class="row col-4  border border-warninig bg-warning col-*-*">
+                        <div class="row col-4  col-lg-4 border border-warninig bg-warning col-*-*">
                             <h3>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, placeat? 
                             </h3>
